// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ellipsis Props Direction Middle 1`] = `
"<view class="nut-ellipsis">
  <!--v-if-->
  <view>...
    <!--v-if-->...
  </view>
  <!--v-if-->
</view>"
`;

exports[`Ellipsis Props Direction Start 1`] = `
"<view class="nut-ellipsis">
  <!--v-if-->
  <view>
    <!--v-if-->...
  </view>
  <!--v-if-->
</view>"
`;

exports[`Ellipsis Props Rows 1`] = `
"<view class="nut-ellipsis">
  <!--v-if-->
  <view>
    <!--v-if-->...
  </view>
  <!--v-if-->
</view>"
`;
